frontend/test/should_fail/pattern_008.grg
using patt;

pattern Foo modify(a:A, b:B)
{
	n:Node -x1->;

	modify {
		a --> n <-- b;
	}
}

rule r {
	foo:Foo();

	modify {
		a:A;
		b:B;
		foo(a, b);
	}
}
